<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">myHairDid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
     <string name="UserName">UserName</string>
    <string name="RememberMe">Login Automatically</string>
    <string name="login">Log in</string>
    <string name="SignUp">Sign Up</string>
</resources>

